--- a/result.yml
+++ b/result.yml
@@ -2,3 +2,6 @@ no_batching:
   single_thread:
     - 1000 Inc -> 9.280930555s
     - 1000 Inc -> 8.98193265s
+  concurrent:
+    - 1000 Inc -> 6.793201616s
+    - 1000 Inc -> 7.003307187s
